implement full requests for emails and validation with unit tests and include configurations and examples

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "author": "Scott Ferguson <fergusonic85@gmail.com>",
   "license": "Apache-2.0",
   "scripts": {
+    "test": "mocha",
     "lint": "eslint **/*.js",
     "lint-fix": "eslint **/*.js --fix"
   },
   "dependencies": {
-    "alexa-sdk": "^1.0.12"
+    "alexa-sdk": "^1.0.12",
+    "parse-domain": "^1.1.0"
   },
   "keywords": [
     "alexa",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.5.0"
   }
 }
