--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "alexa-sdk": "^1.0.12",
+    "email-existence": "^0.1.5",
     "parse-domain": "^1.1.0"
   },
   "keywords": [
@@ -25,6 +26,7 @@
     "extends": "airbnb-base"
   },
   "devDependencies": {
+    "alexa-conversation": "^0.1.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
