--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,9 @@ phases:
       - npm install --production
       - aws cloudformation package --template-file samTemplate.yaml --s3-bucket yeager-skill 
                                    --output-template-file NewSamTemplate.yaml
+  post_build:
+    commands:
+      - npm test
 artifacts:
   type: zip
   files:
